--- a/user-service/src/main/resources/templates/home.html
+++ b/user-service/src/main/resources/templates/home.html
@@ -71,9 +71,8 @@
                     <div class="card-body">
                         <h5 class="card-title">Admin Dashboard</h5>
                         <p class="card-text">System administration panel</p>
-                        <a href="#" class="btn btn-danger me-2">Manage Users</a>
-                        <a href="#" class="btn btn-danger me-2">View Reports</a>
-                        <a href="#" class="btn btn-outline-danger">System Settings</a>
+                        <a th:href="@{/medcenters}" class="btn btn-danger me-2">All Medcenters</a>
+                        <a th:href="@{/requests}" class="btn btn-sm btn-danger">All Requests</a>
                     </div>
                 </div>
             </div>
